--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,32 @@
+/*Clase de validacion*/
+ul.myErrorClass, input.myErrorClass, textarea.myErrorClass, select.myErrorClass {
+    border-width: 1px !important;
+    border-style: solid !important;
+    border-color: #cc0000 !important;
+    background-color: #f3d8d8 !important;
+    background-image: url(http://goo.gl/GXVcmC) !important;
+    background-position: 50% 50% !important;
+    background-repeat: repeat !important;
+}
+ul.myErrorClass input {
+    color: #666 !important;
+}
+label.myErrorClass {
+    color: red;
+    font-size: 11px;
+    /*    font-style: italic;*/
+    display: block;
+}
 
+/*Select 2*/
+.select2-container--default .select2-selection--single {
+
+    border-radius: 0px !important; 
+}
+.select2-container .select2-selection--single {
+
+    height: 32px !important;
+}
 
 /*Tablas*/
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
