correccion de errores

--- a/js/submenu-boostrap4/bootstrap-4-navbar.css
+++ b/js/submenu-boostrap4/bootstrap-4-navbar.css
@@ -19,3 +19,7 @@
 .dropdown-menu .show > .dropdown-toggle::after{
     transform: rotate(-90deg);
 }
+
+.dropdown-submenu {
+    padding: 0.25rem 0.8rem;
+}
