--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Exo+2');
 
+*{
+    font-family: 'Exo 2', sans-serif;
+}
 /*Clase de validacion*/
 ul.myErrorClass, input.myErrorClass, textarea.myErrorClass, select.myErrorClass {
     border-width: 1px !important;
@@ -46,7 +50,7 @@ label.myErrorClass {
 
 table tbody tr{
     cursor: pointer;
-   
+
 }
 table thead tr{
     cursor: pointer;
@@ -100,17 +104,17 @@ input {
 
 /*Login*/
 .Absolute-Center {
-  margin: auto;
-  position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
 }
 
 .Absolute-Center.is-Responsive {
-  width: 50%; 
-  height: 340px;
-  min-width: 300px;
-  max-width: 600px;
-  padding: 30px;
+    width: 50%; 
+    height: 340px;
+    min-width: 300px;
+    max-width: 600px;
+    padding: 30px;
 }
 .cursor-hand{
     cursor: pointer;
