--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,59 @@
+@media screen and (max-width: 767px) {
 
-
-
-/*Clase de validacion*/
-ul.myErrorClass, input.myErrorClass, textarea.myErrorClass, select.myErrorClass {
-    border-width: 1px !important;
-    border-style: solid !important;
-    border-color: #cc0000 !important;
-    background-color: #f3d8d8 !important;
-    background-image: url(http://goo.gl/GXVcmC) !important;
-    background-position: 50% 50% !important;
-    background-repeat: repeat !important;
+    .table-responsive {
+        width: 100%;
+        margin-bottom: 15px;
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+        border: 1px solid #DDD;
+    }
 }
-ul.myErrorClass input {
-    color: #666 !important;
+/*Fuente Nav Submenu*/
+.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
+    font-size: 0.8203125rem;
 }
-label.myErrorClass {
-    color: red;
-    font-size: 11px;
-    /*    font-style: italic;*/
-    display: block;
+.navbar-dark .navbar-nav .nav-link {
+    font-size: 0.8203125rem;
 }
 
-/*Select 2*/
-.select2-container--default .select2-selection--single {
-
-    border-radius: 0px !important; 
+/*Controles pequeños*/
+label {
+    margin-bottom: .1rem; 
 }
-.select2-container .select2-selection--single {
 
-    height: 32px !important;
+.selectize-input {
+    min-height: 0px;
+}
+.selectize-input {
+    padding: 0px 7px;
+}
+
+.form-control-sm, .input-group-sm > .form-control, .input-group-sm > .input-group-prepend > .input-group-text, .input-group-sm > .input-group-append > .input-group-text, .input-group-sm > .input-group-prepend > .btn, .input-group-sm > .input-group-append > .btn {
+    height: 22.5px;
+    font-size: 11.5px;
+}
+/*Tallas en Compras y Ventas*/
+.table.Tallas th, .table.Tallas td {
+    padding: .09rem; 
+    vertical-align: top;
+    border-top: 0px solid #dee2e6;
+}
+
+.table th {
+    padding: .1rem; 
+}
+
+.table td {
+    padding: .1rem; 
+}
+
+
+/*No edición en controles*/
+.disabledForms{
+    opacity: 0.8 ;
+    pointer-events: none;
 }
 
 /*Tablas*/
