--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ div.datatable-wide {
     padding-left: 0;
     padding-right: 0;
 }
+/*Color del cuadro checkbox*/
+.custom-control-label::before {
+ 
+    background-color: #fff;
+}
 
 html{
     background-color: #DCE1E5;
