--- a/css/style.css
+++ b/css/style.css
@@ -29,20 +29,20 @@ div.datatable-wide {
 
 .modal .custom-control-label::before {
 
-    background-color: #DCE1E5;
+    background-color: #f5f5f5;
 }
 
 html{
-    background-color: #DCE1E5;
+    background-color: #f5f5f5;
 }
 
 body{
-    background-color: #DCE1E5;
+    background-color: #f5f5f5;
     line-height: 1.4;
     font-size: 0.8375rem;
 }
 .card-body {
-    background-color: #DCE1E5;
+    background-color: #f5f5f5;
 }
 
 .form-control {
